--- a/manuscript/_extensions/mikemahoney218/arxiv/partials/title.tex
+++ b/manuscript/_extensions/mikemahoney218/arxiv/partials/title.tex
@@ -32,9 +32,5 @@ $if(subtitle)$
 \makeatother
 \subtitle{$subtitle$}
 $endif$
-\def\asep{\\\\\\ } % default: all authors on same column
-$if(authorcols)$
-\def\asep{\And }
-$endif$
-\author{${ by-author:_authors.tex()[\asep] }}
+\author{${ by-author:_authors.tex()[\And] }}
 \date{$date$}
