New analyses for Experiment 3

--- a/manuscript/_assets/references.bib
+++ b/manuscript/_assets/references.bib
@@ -19,6 +19,16 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
+@article{kruschke2018bayesian,
+  title={The Bayesian New Statistics: Hypothesis testing, estimation, meta-analysis, and power analysis from a Bayesian perspective},
+  author={Kruschke, John K and Liddell, Torrin M},
+  journal={Psychonomic bulletin \& review},
+  volume={25},
+  pages={178--206},
+  year={2018},
+  publisher={Springer}
+}
+
 @article{von2012language,
   title={Language nonselective lexical access in bilingual toddlers},
   author={Von Holzen, Katie and Mani, Nivedita},
